--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.2.8+4
   path: ^1.8.2
   mysql1: ^0.20.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
